# berrymill

./: .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  codeql.yml  mypy.yml  pyflake-stxerr.yml  pyflake-ztreat.yml  pyflake.yml  pylint.yml  pytest.yml
config/: berrymill .conf.example  berrymill.conf  berrymill.conf.example  eb-mill.conf  kiwi_boxed_plugin.yml
doc/: Makefile  berrymill.8.md
doc/manpages/: berrymill-cve.1.md  berrymill-kern-hv.1.md  berrymill-overlay.1.md  berrymill-sbom.1.md  berrymill-workflow.1.md  berrymill.8  berrymill.8.md
doc/source/: berryplugins.rst  conf.py  configuration.rst  derivatives.rst  detailedbuild.rst  index.rst  installation.rst  overview.rst  quickstart.rst  writingplugins.rst
doc/source/berryplugins/: cve.rst  generalconf.rst  kernkompozzer.rst  overlay.rst  sbom.rst  wfl.rst
src/: berrymill  berrymill.conf
src/berry_mill/: Makefile  __init__.py  boxbuild.py  boxwrap.py  builder.py  cfgh.py  imagefinder.py  kiwiapp.py  kiwrap.py  localrepos.py  localwrap.py  logger.py  mill.py  mountpoint.py  params.py  plugin.py  preparer.py  preparetask.py  sysinfo.py
test/: appliance_add_packages.xml  chain_a.xml  chain_b.xml  chain_c.xml  chain_d.xml  test_appliance.xml  test_builder.py  test_cfgh.py  test_imgdescr.py  test_imgdescr_static.py  test_kiwrap.py  test_preparer.py  test_targetdir.py  test_traverse.py
test/descr/: appliance_add_packages.xml  chain_a.xml  chain_b.xml  chain_c.xml  chain_d.xml
(+13 files in other folders)
